<resources>
    <string name="app_name">CS4550Weather</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Saved Cities</string>
    <string name="title_notifications">Current location</string>
    <string name="current_location_weather">Current Location Weather</string>
    <string name="get_my_location">Get My Location</string>
    <string name="save_this_location">Save This Location</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="search">Search</string>
    <string name="save_city">Save City</string>
    <string name="saved_cities">Saved Cities</string>
    <string name="no_saved_cities_yet_nsearch_for_a_city_in_the_home_tab_and_save_it">No saved cities yet.\nSearch for a city in the Home tab and save it!</string>
    <string name="city_name">City Name</string>
    <string name="weather_info">Weather Info</string>
    <string name="what_to_wear">What to Wear</string>
    <string name="more_info">More Info</string>
    <string name="description">Description</string>
    <string name="recommendations">Recommendations:</string>
    <string name="close">Close</string>
    <string name="average_today">Average Today</string>
    <string name="average_tomorrow">Average Tomorrow</string>
    <string name="hourly">Hourly</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="rain_today">Rain Today?</string>
    <string name="uv_index">UV Index</string>
    <string name="recommendation">Recommendation</string>
    <string name="or">or</string>
    <string name="back">Back</string>
</resources>