<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#DCE7E4"
android:orientation="vertical"
android:padding="24dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="8dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <!-- City Text -->
    <TextView
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textColor="#557270"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/weather_condition_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">
    </TextView>

    <!-- Weather Condition Title -->
    <TextView
        android:id="@+id/weather_condition_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="35sp"
        android:text="@string/weather_condition"
        android:textAlignment="center"
        android:textColor="#557270"
        app:layout_constraintBottom_toTopOf="@+id/average_today_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name">
    </TextView>

    <!-- Average Today Temperature -->
    <TextView
        android:id="@+id/average_today_temp"
        android:layout_width="353dp"
        android:layout_height="71dp"
        android:layout_marginTop="12dp"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textColor="#557270"
        android:background="@drawable/rounded_box"
        app:layout_constraintBottom_toTopOf="@+id/rain_today_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_condition_title">
    </TextView>

    <!-- Rain Today Title -->
    <TextView
        android:id="@+id/rain_today_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        android:text="@string/rain_today"
        android:textAlignment="center"
        android:textColor="#557270"
        app:layout_constraintBottom_toTopOf="@+id/rain_today_percentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/average_today_temp">
    </TextView>

    <!-- Rain Today Percentage -->
    <TextView
        android:id="@+id/rain_today_percentage"
        android:layout_width="353dp"
        android:layout_height="71dp"
        android:layout_marginTop="12dp"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textColor="#557270"
        android:background="@drawable/rounded_box"
        app:layout_constraintBottom_toTopOf="@+id/uv_index_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rain_today_title">
    </TextView>

    <!-- UV Index Title -->
    <TextView
        android:id="@+id/uv_index_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        android:text="@string/uv_index"
        android:textAlignment="center"
        android:textColor="#557270"
        app:layout_constraintBottom_toTopOf="@+id/uv_index_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rain_today_percentage">
    </TextView>

    <!-- UV Index Number -->
    <TextView
        android:id="@+id/uv_index_number"
        android:layout_width="353dp"
        android:layout_height="71dp"
        android:layout_marginTop="12dp"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textColor="#557270"
        android:background="@drawable/rounded_box"
        app:layout_constraintBottom_toTopOf="@+id/uv_index_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uv_index_title">
    </TextView>

    <!-- What to Wear Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/what_to_wear_button"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#546980"
        android:text="@string/what_to_wear"
        android:textColor="@color/white"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uv_index_number" />

    <!-- Back Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:backgroundTint="#546980"
        android:text="@string/back"
        android:textColor="@color/white"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_to_wear_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

