<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCE7E4"
    android:orientation="vertical"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- City Text -->
        <TextView
            android:id="@+id/city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="#557270"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/average_today_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">
        </TextView>

        <!-- Average Today Title -->
        <TextView
            android:id="@+id/average_today_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="35sp"
            android:text="@string/average_today"
            android:textAlignment="center"
            android:textColor="#557270"
            app:layout_constraintBottom_toTopOf="@+id/average_today_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_name">
        </TextView>

        <!-- Average Today Temperature -->
        <TextView
            android:id="@+id/average_today_temp"
            android:layout_width="353dp"
            android:layout_height="71dp"
            android:layout_marginTop="12dp"
            android:textSize="35sp"
            android:textAlignment="center"
            android:textColor="#557270"
            android:background="@drawable/rounded_box"
            app:layout_constraintBottom_toTopOf="@+id/average_tomorrow_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/average_today_title">
        </TextView>

        <!-- Average Tomorrow Title -->
        <TextView
            android:id="@+id/average_tomorrow_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="35sp"
            android:text="@string/average_tomorrow"
            android:textAlignment="center"
            android:textColor="#557270"
            app:layout_constraintBottom_toTopOf="@+id/average_tomorrow_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/average_today_temp">
        </TextView>

        <!-- Rain Today Percentage -->
        <TextView
            android:id="@+id/average_tomorrow_temp"
            android:layout_width="353dp"
            android:layout_height="71dp"
            android:layout_marginTop="12dp"
            android:textSize="35sp"
            android:textAlignment="center"
            android:textColor="#557270"
            android:background="@drawable/rounded_box"
            app:layout_constraintBottom_toTopOf="@+id/hourly_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/average_tomorrow_title">
        </TextView>

        <!-- UV Index Title -->
        <TextView
            android:id="@+id/hourly_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="35sp"
            android:text="@string/hourly"
            android:textAlignment="center"
            android:textColor="#557270"
            app:layout_constraintBottom_toTopOf="@+id/hourly_temps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/average_tomorrow_temp">
        </TextView>

        <!-- UV Index Number -->
        <TextView
            android:id="@+id/hourly_temps"
            android:layout_width="353dp"
            android:layout_height="71dp"
            android:layout_marginTop="12dp"
            android:textSize="35sp"
            android:textAlignment="center"
            android:textColor="#557270"
            android:background="@drawable/rounded_box"
            app:layout_constraintBottom_toTopOf="@+id/more_info_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hourly_title">
        </TextView>

        <!-- More Info Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/more_info_button"
            android:layout_width="180dp"
            android:layout_height="42dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#546980"
            android:text="@string/more_info"
            android:textColor="@color/white"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hourly_temps" />

        <!-- Back Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="180dp"
            android:layout_height="42dp"
            android:backgroundTint="#546980"
            android:text="@string/back"
            android:textColor="@color/white"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/more_info_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

