<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCE7E4"
    android:orientation="vertical"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- City Text -->
        <TextView
            android:id="@+id/city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="#557270"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/recommendation_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">
        </TextView>

        <!-- Recommendation Title -->
        <TextView
            android:id="@+id/recommendation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="35sp"
            android:text="@string/recommendation"
            android:textAlignment="center"
            android:textColor="#557270"
            app:layout_constraintBottom_toTopOf="@+id/option1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_name">
        </TextView>

        <LinearLayout
            android:id="@+id/option1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/recommendation_title"
            app:layout_constraintBottom_toTopOf="@+id/option2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/option1_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#557270"
                android:textSize="20sp"
                android:gravity="center_vertical"/>

            <ImageView
                android:id="@+id/option1_image"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"/>
        </LinearLayout>

        <TextView
            android:id="@+id/or_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:textSize="20sp"
            android:text="@string/or"
            android:textColor="#557270"
            app:layout_constraintBottom_toTopOf="@+id/option2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option1">
        </TextView>

        <LinearLayout
            android:id="@+id/option2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/option1"
            app:layout_constraintBottom_toTopOf="@+id/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/option2_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#557270"
                android:textSize="20sp"
                android:gravity="center_vertical"/>

            <ImageView
                android:id="@+id/option2_image"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"/>
        </LinearLayout>



        <!-- Back Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="180dp"
            android:layout_height="42dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#546980"
            android:text="@string/back"
            android:textColor="@color/white"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

